tests/fixtures/partition_by_class_narrowing.out
error: Revealed type is: NilClass | String

        @ __ROOT__/tests/fixtures/partition_by_class_narrowing.rb:9
      9 |      reveal_type(enum.keys.first)
                           ^^^^^^^^^^^^^^^ expression
